cmake_minimum_required(VERSION 3.14)
project(PC2)

set(CMAKE_CXX_STANDARD 14)

add_executable(PC2 main.cpp Fight.cpp Fight.h Arena.cpp Arena.h Fighter.cpp Fighter.h Defense.cpp Defense.h Attack.cpp Attack.h BruceLee.cpp BruceLee.h ChuckNorris.cpp ChuckNorris.h JasonStatham.cpp JasonStatham.h Elude.cpp Elude.h Shield.cpp Shield.h Armor.cpp Armor.h Punch.cpp Punch.h Saber.cpp Saber.h Firearm.cpp Firearm.h Arena_TDD.cpp)